# std_parallel_container_ex

./: .build_version  .editorconfig  .gitignore  CMakeLists.txt  README.md  unseal_template.ps1  vcpkg-configuration.json  vcpkg.json
cmake/: auto_increment_version.cmake  project_setting.cmake  vcpkg_env.cmake
source/application/: CMakeLists.txt  app.cpp
source/interface_library/: CMakeLists.txt  channel.hpp  global_regerr.hpp  one_call_function.hpp  parallel_container  self_releasing_async.hpp  single_async_executor.hpp  syncer.hpp
source/static_library/: CMakeLists.txt  static.cpp  static.hpp
